#
# Copyright (C) 2021, Northwestern University and Fermi National Accelerator Laboratory
# See COPYRIGHT notice in top-level directory.
#
# @configure_input@

EXTRA_DIST = compatibility.md \
             manual.md

dist-hook:
#	$(SED_I) -e "1,10s|_RELEASE_DATE_|@H5VL_LOG_RELEASE_DATE@|" $(distdir)/compatibility.md
#	$(SED_I) -e "1,10s|_VERSION_|$(VERSION)|" $(distdir)/compatibility.md
#    $(SED_I) -e "1,10s|_RELEASE_DATE_|@H5VL_LOG_RELEASE_DATE@|" $(distdir)/manual.md
#	$(SED_I) -e "1,10s|_VERSION_|$(VERSION)|" $(distdir)/manual.md

