#
# Copyright (C) 2021, Northwestern University and Argonne National Laboratory
# See COPYRIGHT notice in top-level directory.
#
# @configure_input@

EXTRA_DIST =    api.md \
                compatibility.md \
                design.md \
                INSTALL.md \
                intro.md \
                usage.md \
                userguide.md \
                util.md

dist-hook:
#	$(SED_I) -e "1,10s|_RELEASE_DATE_|@H5VL_LOG_RELEASE_DATE@|" $(distdir)/compatibility.md
#	$(SED_I) -e "1,10s|_VERSION_|$(VERSION)|" $(distdir)/compatibility.md
#    $(SED_I) -e "1,10s|_RELEASE_DATE_|@H5VL_LOG_RELEASE_DATE@|" $(distdir)/manual.md
#	$(SED_I) -e "1,10s|_VERSION_|$(VERSION)|" $(distdir)/manual.md

